--- a/payjp-android-cardform/src/main/res/layout/payjp_card_display_view.xml
+++ b/payjp-android-cardform/src/main/res/layout/payjp_card_display_view.xml
@@ -24,8 +24,8 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="220dp"
-        android:layout_height="150dp"
+        android:layout_width="232dp"
+        android:layout_height="156dp"
         android:layout_gravity="center_horizontal"
         android:clipToPadding="false"
         android:padding="12dp"
@@ -65,7 +65,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="end|center_vertical"
-                    android:minWidth="24dp"
+                    android:paddingVertical="2dp"
+                    android:paddingHorizontal="8dp"
+                    android:minWidth="40dp"
                     android:layout_marginEnd="8dp"
                     android:textSize="12sp"
                     tools:text="•••" />
@@ -80,53 +82,61 @@
             android:layout_height="match_parent"
             android:elevation="8dp"
             tools:background="@color/payjp_card_display_background"
-            tools:targetApi="lollipop">
+            tools:targetApi="lollipop"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
+            >
 
         <TextView
                 android:id="@+id/display_pan"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="12dp"
                 android:maxLines="1"
                 android:singleLine="true"
+                android:gravity="center"
                 android:text="XXXX XXXX XXXX XXXX"
                 android:textSize="14sp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0"
+                android:paddingVertical="2dp"
+                android:paddingHorizontal="8dp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintHorizontal_bias="0"
+                app:layout_constraintBottom_toTopOf="@id/display_expiration"
+                app:layout_constraintVertical_bias="1"
+                />
 
         <TextView
                 android:id="@+id/display_expiration"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="12dp"
-                android:layout_marginBottom="12dp"
                 android:maxLines="1"
                 android:singleLine="true"
                 android:text="XX/XX"
+                android:paddingVertical="2dp"
+                android:paddingHorizontal="8dp"
                 android:textSize="12sp"
-                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintHorizontal_bias="0"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1"
-                app:layout_constraintStart_toEndOf="@id/display_holder" />
+                app:layout_constraintBottom_toTopOf="@id/display_holder"
+                />
 
         <TextView
                 android:id="@+id/display_holder"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="12dp"
-                android:layout_marginBottom="12dp"
+                android:layout_marginBottom="8dp"
                 android:maxLines="1"
+                android:paddingVertical="2dp"
+                android:paddingHorizontal="8dp"
                 android:singleLine="true"
                 android:text="NAME"
                 android:textSize="12sp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/display_expiration"
-                app:layout_constraintHorizontal_bias="0"
-                app:layout_constraintStart_toStartOf="parent" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                />
 
         <TextView
                 android:id="@+id/display_cvc_amex"
@@ -135,8 +145,9 @@
                 app:layout_constraintBottom_toTopOf="@id/display_pan"
                 app:layout_constraintEnd_toEndOf="@id/display_pan"
                 android:layout_marginBottom="4dp"
-                android:layout_marginEnd="12dp"
-                android:minWidth="30dp"
+                android:minWidth="48dp"
+                android:paddingVertical="2dp"
+                android:paddingHorizontal="8dp"
                 android:textSize="12sp"
                 android:visibility="invisible"
                 tools:text="••••" />
@@ -149,7 +160,7 @@
                 app:layout_constraintBottom_toTopOf="@id/display_pan"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginStart="12dp"
+                android:padding="8dp"
                 android:layout_marginTop="12dp"
                 tools:src="@drawable/logo_visa"
                 app:layout_constraintHorizontal_bias="0"
