--- a/payjp-android-cardform/src/main/res/layout/payjp_card_display_view.xml
+++ b/payjp-android-cardform/src/main/res/layout/payjp_card_display_view.xml
@@ -69,6 +69,7 @@
                     android:paddingHorizontal="8dp"
                     android:minWidth="40dp"
                     android:layout_marginEnd="8dp"
+                    android:textColor="@color/payjp_card_display_text_color_cvc_default"
                     android:textSize="12sp"
                     tools:text="•••" />
 
@@ -112,7 +113,7 @@
                 android:layout_height="wrap_content"
                 android:maxLines="1"
                 android:singleLine="true"
-                android:text="XX/XX"
+                android:text="MM/YY"
                 android:paddingVertical="2dp"
                 android:paddingHorizontal="8dp"
                 android:textSize="12sp"
