--- a/payjp-android-cardform/src/main/res/layout/payjp_card_form_view.xml
+++ b/payjp-android-cardform/src/main/res/layout/payjp_card_form_view.xml
@@ -29,7 +29,7 @@
         android:importantForAutofill="no"
         android:orientation="vertical"
         tools:theme="@style/Payjp.Theme.CardForm"
-        android:layout_marginTop="20dp"
+        android:padding="16dp"
         tools:targetApi="o">
 
     <com.google.android.material.textfield.TextInputLayout
