Share layout files.

--- a/payjp-android-cardform/src/main/res/layout/payjp_card_form_element_cvc_layout.xml
+++ b/payjp-android-cardform/src/main/res/layout/payjp_card_form_element_cvc_layout.xml
@@ -26,26 +26,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginLeft="@dimen/payjp_card_form_element_margin"
-        android:layout_marginRight="@dimen/payjp_card_form_element_margin"
-        xmlns:tools="http://schemas.android.com/tools">
+        android:layout_marginRight="@dimen/payjp_card_form_element_margin">
 
-    <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/input_layout_holder_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/payjp_card_form_holder_name_label">
-
-        <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/input_edit_holder_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:autofillHints="name"
-                android:imeOptions="flagNoExtractUi|actionDone|flagNoAccessoryAction"
-                android:inputType="textVisiblePassword"
-                android:maxLines="1"
-                tools:targetApi="o"
-                tools:text="TARO YAMADA" />
-
-    </com.google.android.material.textfield.TextInputLayout>
+    <include layout="@layout/payjp_card_form_part_cvc_layout" />
 
 </FrameLayout>
