--- a/payjp-android-cardform/src/main/res/layout/payjp_card_form_part_cvc_layout.xml
+++ b/payjp-android-cardform/src/main/res/layout/payjp_card_form_part_cvc_layout.xml
@@ -22,33 +22,25 @@
   ~ SOFTWARE.
   -->
 
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="@dimen/payjp_card_form_element_margin"
-        android:layout_marginRight="@dimen/payjp_card_form_element_margin"
+<com.google.android.material.textfield.TextInputLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
+        android:id="@+id/input_layout_cvc"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/payjp_card_form_cvc_label"
+        app:endIconMode="custom"
+        app:endIconTint="@null">
 
-    <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/input_layout_cvc"
+    <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/input_edit_cvc"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/payjp_card_form_cvc_label"
-            app:endIconMode="custom"
-            app:endIconTint="@null">
+            android:autofillHints="creditCardSecurityCode"
+            android:imeOptions="flagNoExtractUi|actionNext"
+            android:inputType="numberPassword"
+            android:maxLines="1"
+            tools:targetApi="o"
+            tools:text="123" />
 
-        <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/input_edit_cvc"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:autofillHints="creditCardSecurityCode"
-                android:imeOptions="flagNoExtractUi|actionNext"
-                android:inputType="numberPassword"
-                android:maxLines="1"
-                tools:targetApi="o"
-                tools:text="123" />
-
-    </com.google.android.material.textfield.TextInputLayout>
-
-</FrameLayout>
+</com.google.android.material.textfield.TextInputLayout>
