--- a/payjp-android-cardform/src/main/res/layout/payjp_card_form_part_number_layout.xml
+++ b/payjp-android-cardform/src/main/res/layout/payjp_card_form_part_number_layout.xml
@@ -22,35 +22,27 @@
   ~ SOFTWARE.
   -->
 
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="@dimen/payjp_card_form_element_margin"
-        android:layout_marginRight="@dimen/payjp_card_form_element_margin"
+<com.google.android.material.textfield.TextInputLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
+        android:id="@+id/input_layout_number"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/payjp_card_form_number_label"
+        app:endIconDrawable="@drawable/ic_camera"
+        app:endIconMode="none"
+        app:startIconTint="@null"
+        tools:endIconMode="custom">
 
-    <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/input_layout_number"
+    <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/input_edit_number"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/payjp_card_form_number_label"
-            app:endIconDrawable="@drawable/ic_camera"
-            app:endIconMode="none"
-            app:startIconTint="@null"
-            tools:endIconMode="custom">
+            android:autofillHints="creditCardNumber"
+            android:imeOptions="flagNoExtractUi|actionNext"
+            android:inputType="phone"
+            android:maxLines="1"
+            tools:targetApi="o"
+            tools:text="1234 1234 1234 1234" />
 
-        <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/input_edit_number"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:autofillHints="creditCardNumber"
-                android:imeOptions="flagNoExtractUi|actionNext"
-                android:inputType="phone"
-                android:maxLines="1"
-                tools:targetApi="o"
-                tools:text="1234 1234 1234 1234" />
-
-    </com.google.android.material.textfield.TextInputLayout>
-
-</FrameLayout>
+</com.google.android.material.textfield.TextInputLayout>
