--- a/payjp-android-cardform/src/main/res/layout/payjp_card_display_view.xml
+++ b/payjp-android-cardform/src/main/res/layout/payjp_card_display_view.xml
@@ -156,16 +156,17 @@
         <ImageView
                 android:id="@+id/display_brand_logo"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="parent"
+                android:layout_height="24dp"
+                android:layout_marginStart="4dp"
+                android:layout_marginTop="16dp"
+                android:scaleType="fitStart"
                 app:layout_constraintBottom_toTopOf="@id/display_pan"
-                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:padding="8dp"
-                android:layout_marginTop="12dp"
-                tools:src="@drawable/logo_visa"
                 app:layout_constraintHorizontal_bias="0"
-            />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0"
+                tools:src="@drawable/ic_card_display_brand_visa" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
