Fix format when paste number.

--- a/payjp-android-cardform/src/main/res/layout/payjp_card_display_view.xml
+++ b/payjp-android-cardform/src/main/res/layout/payjp_card_display_view.xml
@@ -96,7 +96,7 @@
                 android:layout_height="wrap_content"
                 android:maxLines="1"
                 android:singleLine="true"
-                android:gravity="center"
+                android:gravity="center|start"
                 android:hint="XXXX XXXX XXXX XXXX"
                 android:textSize="14sp"
                 android:paddingVertical="2dp"
