--- a/payjp-android-cardform/src/main/res/values/colors.xml
+++ b/payjp-android-cardform/src/main/res/values/colors.xml
@@ -29,5 +29,8 @@
     <color name="payjp_card_display_background">#515151</color>
     <color name="payjp_card_display_text_color">#ddffffff</color>
     <color name="payjp_card_display_text_color_hint">#60ffffff</color>
-    <color name="payjp_card_display_text_color_cvc_default">#333333</color>
+    <color name="payjp_card_display_text_color_cvc_default">#DE000000</color>
+    <color name="payjp_card_display_text_color_hint_cvc_default">#1F000000</color>
+    <color name="payjp_card_display_cvc_default_background">#ffffff</color>
+    <color name="payjp_card_display_magnetic_background">#2b2b2b</color>
 </resources>
