--- a/payjp-android-cardform/src/main/res/layout/payjp_card_form_activity.xml
+++ b/payjp-android-cardform/src/main/res/layout/payjp_card_form_activity.xml
@@ -92,17 +92,11 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <FrameLayout
-            android:id="@+id/loading_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-        <ProgressBar
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center" />
-
-    </FrameLayout>
+    <ProgressBar
+            android:id="@+id/content_loading_progress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/error_view"
