fix focus and ime handling

--- a/payjp-android-cardform/src/main/res/layout/payjp_card_form_part_phone_number_layout.xml
+++ b/payjp-android-cardform/src/main/res/layout/payjp_card_form_part_phone_number_layout.xml
@@ -42,6 +42,8 @@
             android:layout_height="wrap_content"
             android:editable="false"
             android:inputType="none"
+            android:imeOptions="actionNext"
+            android:focusable="false"
             android:lines="1"
             tools:ignore="Deprecated"
             tools:text="🇯🇵(+81)" />
