--- a/payjp-android-cardform/src/main/res/layout/payjp_card_form_element_email_phone_layout.xml
+++ b/payjp-android-cardform/src/main/res/layout/payjp_card_form_element_email_phone_layout.xml
@@ -22,12 +22,21 @@
   ~ SOFTWARE.
   -->
 
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
         android:layout_marginLeft="@dimen/payjp_card_form_element_margin"
         android:layout_marginRight="@dimen/payjp_card_form_element_margin">
 
-    <include android:id="@+id/content" layout="@layout/payjp_card_form_part_email_layout" />
+    <FrameLayout
+        android:id="@+id/content_email_frame"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/payjp_card_form_margin"
+        >
+        <include android:id="@+id/content_email" layout="@layout/payjp_card_form_part_email_layout" />
+    </FrameLayout>
+    <include android:id="@+id/content_phone" layout="@layout/payjp_card_form_part_phone_number_layout" />
 
-</FrameLayout>
+</LinearLayout>
