--- a/sample/src/main/res/layout/card_sample.xml
+++ b/sample/src/main/res/layout/card_sample.xml
@@ -39,14 +39,31 @@
             app:cardElevation="4dp"
             android:background="?android:selectableItemBackground">
 
-        <TextView
-                android:id="@+id/name"
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="16dp">
+
+            <TextView
+                android:id="@+id/header"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="16dp"
-                style="@style/TextAppearance.AppCompat.Title"
-                tools:text="Sample"/>
+                android:textColor="@android:color/darker_gray"
+                android:textSize="14sp"
+                android:visibility="gone"
+                tools:text="Header"
+                tools:visibility="visible" />
 
+            <TextView
+                    android:id="@+id/name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
+                    style="@style/TextAppearance.AppCompat.Title"
+                    tools:text="Sample"/>
+
+        </LinearLayout>
 
     </androidx.cardview.widget.CardView>
 
